[project]
name = "whatsapp-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.8.1",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.21.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "alembic>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
]
